@@ -5,15 +5,20 @@ import sys
 import traceback
 
 import logging
-import chimera.core.log
+
+from chimera.core.compat import *
 
 
 def printException (e, stream=sys.stdout):
+
     print >> stream, ''.join(strException(e))
 
-def strException (e):
+    if hasattr(e, 'cause') and getattr(e, 'cause') != None:
+        print >> stream, "Caused by:",
+        print >> stream, ''.join(e.cause)
 
-    # almost copied form Pyro to allow personalization on format
+        
+def strException (e):
 
     def formatRemoteTraceback(remote_tb_lines) :
         result=[]
@@ -22,12 +27,15 @@ def strException (e):
             if line.endswith("\n"):
                 line=line[:-1]
             lines = line.split("\n")
+
             for line in lines :
                 result.append("\n | ")
                 result.append(line)
+
         result.append("\n +--- End of remote traceback")
         return result
 
+    # almost copied form Pyro to allow personalization on format
     try:
         exc_type, exc_value, exc_tb = sys.exc_info()
         remote_tb = getattr(e, Pyro.constants.TRACEBACK_ATTRIBUTE, None)
@@ -43,14 +51,19 @@ def strException (e):
         # clean up cycle to traceback, to allow proper GC
         del exc_type, exc_value, exc_tb
 
-def logException (e):
-    logging.getLogger(__name__).debug(printException(e))
-
 
 # exceptions hierarchy
 
 class ChimeraException (Exception):
-    pass
+
+    def __init__ (self, msg="", *args):
+        Exception.__init__ (self, msg, *args)
+
+        if not all(sys.exc_info()):
+            self.cause = None
+        else:
+            self.cause = strException(sys.exc_info()[1])
+
 
 class InvalidLocationException(ChimeraException):
     pass
@@ -65,4 +78,13 @@ class ChimeraObjectException(ChimeraException):
     pass
 
 class ClassLoaderException (ChimeraException):
+    pass
+
+class InstrumentBusyException (ChimeraException):
+    pass
+
+class OptionConversionException (ChimeraException):
+    pass
+
+class ChimeraValueError (ChimeraException):
     pass
